Gelugons, winter wolves, umber hulks, remorhazes, and wolves

--- a/src/components/lore/lore-languages/lore-languages.component.html
+++ b/src/components/lore/lore-languages/lore-languages.component.html
@@ -274,6 +274,20 @@
         result in nothing but gibberish.
       </p>
     </div>
+    <h5>Supernal</h5>
+    <div>
+      <p>
+        Supernal is the language of the highest gods, and the primordial
+        language of creation. Very few creatures can actually learn to speak
+        Supernal fluently, but many powerful spellcasters know a few words -
+        those spoken in the various "Power Word" spells.
+      </p>
+      <p>
+        When spoken, Supernal sounds similar to Celestial but with a certain
+        ancient quality that is difficult to quantify. When written, it uses its
+        own unique script that the Celestial script is distantly descended from.
+      </p>
+    </div>
     <h5>Thieves' Cant</h5>
     <div>
       <p>
