--- a/src/components/lore/lore-pantheons/lore-pantheons.component.html
+++ b/src/components/lore/lore-pantheons/lore-pantheons.component.html
@@ -227,4 +227,159 @@
       </div>
     </ng-container>
   </nz-tab>
+  <nz-tab nzTitle="Other Deities">
+    <nz-table
+      [nzData]="['yo mama']"
+      [nzShowPagination]="false"
+      [nzPageSize]="1 / 0"
+      nzSize="small"
+    >
+      <thead>
+        <tr>
+          <th>Deity</th>
+          <th>Gender</th>
+          <th>Sphere(s)</th>
+          <th>Alignment</th>
+          <th>Symbol</th>
+          <th>Portfolio</th>
+          <th>Cleric Domains</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Abeloth</td>
+          <td>Female</td>
+          <td>Forcespace</td>
+          <td>CE</td>
+          <td>A black hole</td>
+          <td>Destruction, Hunger, Madness</td>
+          <td>
+            Apocalypse, Arcana, Eldritch, Knowledge, Madness, Trickery,
+            Twilight, War
+          </td>
+        </tr>
+        <tr>
+          <td>The Daughter</td>
+          <td>Female</td>
+          <td>Forcespace</td>
+          <td>NG</td>
+          <td>A stylized flower around a starburst</td>
+          <td>Light</td>
+          <td>Arcana, Beauty, Hope, Life, Light, Order, Peace, Protection</td>
+        </tr>
+        <tr>
+          <td>The Father</td>
+          <td>Male</td>
+          <td>Forcespace</td>
+          <td>N</td>
+          <td>A combination of a flower and a starburst</td>
+          <td>Balance</td>
+          <td>
+            Arcana, Inquisition, Judgement, Knowledge, Order, Peace, Protection
+          </td>
+        </tr>
+        <tr>
+          <td>The Son</td>
+          <td>Male</td>
+          <td>Forcespace</td>
+          <td>NE</td>
+          <td>A starburst around a stylized flower</td>
+          <td>Darkness</td>
+          <td>Arcana, Death, Pain, Plague, Shadow, Sorrow, Tempest, War</td>
+        </tr>
+        <tr>
+          <td>Demise</td>
+          <td>Male</td>
+          <td>Goldenspace</td>
+          <td>CE</td>
+          <td>Three upside-down black triangles</td>
+          <td>Destruction, Darkness, Evil</td>
+          <td>Apocalypse, Death, Flame, Forge, Shadow, Steel, Strength, War</td>
+        </tr>
+        <tr>
+          <td>Din</td>
+          <td>Female</td>
+          <td>Goldenspace</td>
+          <td>CG</td>
+          <td>Three red waves</td>
+          <td>Earth, Fire, Strength</td>
+          <td>
+            Flame, Forge, Hearth, Light, Mountain, Steel, Strength, War, Wealth
+          </td>
+        </tr>
+        <tr>
+          <td>Farore</td>
+          <td>Female</td>
+          <td>Goldenspace</td>
+          <td>NG</td>
+          <td>Three concentric green circles</td>
+          <td>Courage, Nature, Life, Wind</td>
+          <td>
+            Beauty, Hearth, Hope, Life, Light, Nature, Protection, Sky, Steel,
+            Tempest, War
+          </td>
+        </tr>
+        <tr>
+          <td>Hylia</td>
+          <td>Female</td>
+          <td>Goldenspace</td>
+          <td>LG</td>
+          <td>Three golden triangles</td>
+          <td>Light, Protection</td>
+          <td>Hearth, Hope, Light, Order, Peace, Protection, Story</td>
+        </tr>
+        <tr>
+          <td>Nayru</td>
+          <td>Female</td>
+          <td>Goldenspace</td>
+          <td>CG</td>
+          <td>Three blue crescents and circles</td>
+          <td>Music, Time, Water, Wisdom</td>
+          <td>
+            Arts, Beauty, Grave, Knowledge, Light, Luck, Order, Sea, Story,
+            Time, Travel, Wealth
+          </td>
+        </tr>
+        <tr>
+          <td>Null</td>
+          <td>Agender</td>
+          <td>Goldenspace</td>
+          <td>LE</td>
+          <td>A black swirl</td>
+          <td>Nothingness</td>
+          <td>Death, Eldritch, Madness, Order, Shadow, Twilight</td>
+        </tr>
+        <tr>
+          <td>Arceus</td>
+          <td>Agender (Masculine)</td>
+          <td>Pok&eacute;space</td>
+          <td>LN</td>
+          <td>A spiked golden ring</td>
+          <td>Creation, Pok&eacute;mon</td>
+          <td>Arcana, Judgement, Knowledge, Life, Light, Order</td>
+        </tr>
+        <tr>
+          <td>Dark Matter</td>
+          <td>Agender</td>
+          <td>Popspace</td>
+          <td>NE</td>
+          <td>A black circle with a red eye</td>
+          <td>Darkness</td>
+          <td>Eldritch, Madness, Shadow</td>
+        </tr>
+        <tr>
+          <td>Yahweh / Allah</td>
+          <td>Agender (Masculine)</td>
+          <td>Primespace, other spheres in Sector &epsilon;</td>
+          <td>LN</td>
+          <td>A cross / a crescent and star</td>
+          <td>Creation, Judgement</td>
+          <td>
+            Apocalypse, Flame, Forge, Hearth, Inquisition, Judgement, Life,
+            Light, Order, Pain, Story, War
+          </td>
+        </tr>
+      </tbody>
+    </nz-table>
+  </nz-tab>
 </nz-tabset>
