Preparing the wiki for the new setup with subclass spells

--- a/src/components/characters/builder/pages/class/class.component.html
+++ b/src/components/characters/builder/pages/class/class.component.html
@@ -97,6 +97,7 @@
           [characterObj]="characterClass"
           [feature]="feature"
           [characterLevel]="characterClass.level"
+          [classLevel]="level"
         ></app-builder-feature>
       </div>
     </ng-container>
@@ -107,6 +108,7 @@
           [characterObj]="characterClass"
           [feature]="feature"
           [characterLevel]="characterClass.level"
+          [classLevel]="level"
         ></app-builder-feature>
       </div>
     </ng-container>
