--- a/src/components/pages/features/builder-listed/builder-listed.component.html
+++ b/src/components/pages/features/builder-listed/builder-listed.component.html
@@ -75,6 +75,7 @@
       [characterLevel]="characterLevel"
       [sourceId]="listed.id"
       [sourceValue]="getOption(option).name"
+      [classLevel]="classLevel"
     ></app-builder-feature>
   </div>
 </ng-container>
