--- a/src/components/pages/features/display-choice/display-choice.component.html
+++ b/src/components/pages/features/display-choice/display-choice.component.html
@@ -6,6 +6,7 @@
         [feature]="trait"
         [choiceFeature]="true"
         [level]="level + 1"
+        [classLevel]="classLevel"
       ></app-display-feature>
     </ng-container>
   </ng-container>
@@ -18,6 +19,7 @@
       [choiceFeature]="true"
       [level]="level + 1"
       [displayHeader]="false"
+      [classLevel]="classLevel"
     ></app-display-feature>
   </ng-container>
 </ng-container>
