--- a/src/components/pages/features/sheet-listed/sheet-listed.component.html
+++ b/src/components/pages/features/sheet-listed/sheet-listed.component.html
@@ -6,6 +6,7 @@
       [feature]="trait"
       [level]="level + 1"
       [characterLevel]="characterLevel"
+      [classLevel]="classLevel"
     ></app-sheet-feature>
   </div>
 </div>
@@ -17,6 +18,7 @@
       [feature]="choiceValue"
       [level]="level + 1"
       [characterLevel]="characterLevel"
+      [classLevel]="classLevel"
     ></app-sheet-feature>
   </div>
 </ng-template>
