--- a/src/components/characters/sheet/pages/monster/monster.component.html
+++ b/src/components/characters/sheet/pages/monster/monster.component.html
@@ -1,63 +1,16 @@
-<!-- <nz-modal
-  [(nzVisible)]="settingsModal"
-  nzTitle="Monster Settings"
-  [nzCancelText]="null"
-  [nzClosable]="false"
-  [nzOkText]="null"
-  (nzOnCancel)="settingsModal = false"
->
-  <ng-container *nzModalContent>
-    <div *ngIf="monster.type.includes('beast')">
-      <nz-switch
-        [(ngModel)]="direBeast"
-        (ngModelChange)="updateDireBeast()"
-      ></nz-switch>
-      Dire Beast
-    </div>
-
-    <ng-container
-      *ngIf="
-        (!monster.type.includes('construct') &&
-          !monster.type.includes('undead')) ||
-        this.undead
-      "
-    >
-      <h5>Undead</h5>
-      <nz-radio-group [(ngModel)]="undead" (ngModelChange)="updateUndead()">
-        <label nz-radio nzValue="undefined">N/A</label>
-        <label nz-radio nzValue="ghost">Ghost</label>
-        <label nz-radio nzValue="mummy">Mummy</label>
-        <label nz-radio nzValue="skeleton">Skeleton</label>
-        <label nz-radio nzValue="zombie">Zombie</label>
-      </nz-radio-group>
-    </ng-container>
-  </ng-container>
-</nz-modal> -->
-
 <div class="header">
   <h3>{{ monster.name }}</h3>
-  <!-- <div class="settings">
-    <button
-      class="header-button"
-      (click)="settingsModal = true"
-      title="Monster Settings"
-    >
-      <span class="mdi mdi-cog"></span>
-    </button>
-  </div> -->
 </div>
 
 <div>
   <em>
     <div>
       <ng-container *ngIf="!monster.swarmSize; else swarm">
-        {{ monster.size }} {{ monster.type }}
-        <ng-container *ngIf="monster.tags">
-          ({{ monster.tags.join(", ") }})
-        </ng-container>
+        {{ monster.size }} {{ getMonsterTypesString(monster.type) }}
       </ng-container>
       <ng-template #swarm>
-        {{ monster.size }} swarm of {{ monster.swarmSize }} {{ monster.type }}s
+        {{ monster.size }} swarm of {{ monster.swarmSize }}
+        {{ getMonsterTypesString(monster.type, true) }}
       </ng-template>
     </div>
   </em>
@@ -124,6 +77,7 @@
   <div *ngIf="monster.languages">
     <strong>Languages:</strong> {{ monster.languages.join(", ") }}
   </div>
+  <div *ngIf="monster.cr"><strong>CR:</strong> {{ formatCr(monster.cr) }}</div>
 </div>
 
 <ng-container *ngIf="monster.spellcasting">
@@ -178,11 +132,9 @@
 <ng-container *ngIf="monster.legendary">
   <hr />
   <h4>Legendary Actions</h4>
-  The {{ monster.name.toLowerCase() }} can take
-  {{ monster.mythic ? "5" : "3" }} legendary actions, choosing from the options
-  below. Only one legendary action can be used at a time and only at the end of
-  another creature's turn. The {{ monster.name.toLowerCase() }} regains spent
-  legendary actions at the start of its turn.
+  <p>
+    {{ getLegendaryActionsHeader() }}
+  </p>
   <div *ngFor="let trait of monster.legendary">
     <app-monster-trait
       [trait]="trait"
@@ -193,8 +145,9 @@
 <ng-container *ngIf="monster.mythic">
   <hr />
   <h4>Mythic Actions</h4>
-  If the {{ monster.name.toLowerCase() }} has used its Mythic trait in the last
-  hour, it can use the options below as legendary actions.
+  <p>
+    {{ getMythicActionsHeader() }}
+  </p>
   <div *ngFor="let trait of monster.mythic">
     <app-monster-trait
       [trait]="trait"
