A lot of stuff, I can't be bothered going through it all and figuring out what

--- a/src/components/pages/spells/spells/spells.component.html
+++ b/src/components/pages/spells/spells/spells.component.html
@@ -19,6 +19,8 @@
   </ng-container>
 </ul>
 <div id="content" class="tab-content">
+  <div *ngIf="description" [innerHtml]="description"></div>
+
   <ng-container *ngFor="let level of spells; let i = index">
     <div
       *ngIf="
