Metallic domain renamed to draconic domain and crystal dragon renamed to diamond dragon

--- a/src/components/lore/lore-pantheons/lore-pantheons.component.html
+++ b/src/components/lore/lore-pantheons/lore-pantheons.component.html
@@ -304,7 +304,8 @@
           <td>Three red waves</td>
           <td>Earth, Fire, Strength</td>
           <td>
-            Flame, Forge, Hearth, Light, Mountain, Steel, Strength, War, Wealth
+            Draconic, Flame, Forge, Hearth, Light, Mountain, Steel, Strength,
+            War, Wealth
           </td>
         </tr>
         <tr>
@@ -315,8 +316,8 @@
           <td>Three concentric green circles</td>
           <td>Courage, Nature, Life, Wind</td>
           <td>
-            Beauty, Hearth, Hope, Life, Light, Nature, Protection, Sky, Steel,
-            Tempest, War
+            Beauty, Draconic, Hearth, Hope, Life, Light, Nature, Protection,
+            Sky, Steel, Tempest, War
           </td>
         </tr>
         <tr>
@@ -336,8 +337,8 @@
           <td>Three blue crescents and circles</td>
           <td>Music, Time, Water, Wisdom</td>
           <td>
-            Arts, Beauty, Grave, Knowledge, Light, Luck, Order, Sea, Story,
-            Time, Travel, Wealth
+            Arts, Beauty, Draconic, Grave, Knowledge, Light, Luck, Order, Sea,
+            Story, Time, Travel, Wealth
           </td>
         </tr>
         <tr>
@@ -356,7 +357,7 @@
           <td>LN</td>
           <td>A spiked golden ring</td>
           <td>Creation, Pok&eacute;mon</td>
-          <td>Arcana, Judgement, Knowledge, Life, Light, Order</td>
+          <td>Arcana, Draconic, Judgement, Knowledge, Life, Light, Order</td>
         </tr>
         <tr>
           <td>Dark Matter</td>
