--- a/src/components/database/tabs/transformation-tab/transformation-tab.component.html
+++ b/src/components/database/tabs/transformation-tab/transformation-tab.component.html
@@ -20,7 +20,8 @@
     </p>
     <p>
       The Lich transformation has the additional requirement of being able to
-      cast 7th-level spells.
+      cast 7th-level spells in most cases, but help from a sufficiently powerful
+      magical being can sometimes bypass this requirement.
     </p>
   </div>
   <h5>Leveling Up a Transformation</h5>
