--- a/src/components/pages/features/display-feature/display-feature.component.html
+++ b/src/components/pages/features/display-feature/display-feature.component.html
@@ -802,7 +802,7 @@
   <ng-container
     *ngIf="!feature.subclassSpellsFeature && !feature.subclassExploitsFeature"
   >
-    <p [innerHTML]="feature.description"></p>
+    <p [innerHTML]="description"></p>
   </ng-container>
 
   <ng-container *ngIf="feature.subFeatures">
