--- a/src/components/pages/spells/spells/spells.component.html
+++ b/src/components/pages/spells/spells/spells.component.html
@@ -57,6 +57,7 @@
                   {{ spell.element }}
                 </sup>
                 <sup *ngIf="spell.unique"> U </sup>
+                <span *ngIf="spell.curse"> 🜏 </span>
               </td>
               <td>{{ spell.school }}</td>
               <td>
