Massive property update

--- a/src/components/general-store/tabs/firearm-tab/firearm-tab.component.html
+++ b/src/components/general-store/tabs/firearm-tab/firearm-tab.component.html
@@ -72,8 +72,7 @@
     </p>
     <p>
       <strong>Massive Firearms.</strong> A firearm with a weight of 30 pounds or
-      more has the Massive property. Its Strength score requirement is equal to
-      10 plus 1 for every 10 pounds above 30.
+      more has the Massive property.
     </p>
     <p>
       <strong>Light Firearms.</strong> A firearm with a weight of 7 pounds or
