--- a/src/components/rules/rules-combat/rules-combat.component.html
+++ b/src/components/rules/rules-combat/rules-combat.component.html
@@ -579,6 +579,22 @@
       it, it may regurgitate each creature Swallowed by it.
     </p>
 
+    <h5><span class="mdi mdi-lasso"></span>Tethered</h5>
+    <p>
+      A creature that is Tethered by an object or another creature cannot move outside of the reach of the ability used to tether it. Additionally, if the Tethered creature is at the maximum distance from the source of its tether, it is moved if the source moves away from it.
+    </p>
+    <h6>Ending the Condition</h6>
+    <p>
+      Any effect that ends the Grappled condition can also end the Tethered
+      condition. The DC to remove an Tethered creature is noted as its Remove
+      DC.
+    </p>
+    <h6>Releasing a Tether</h6>
+    <p>
+      A creature that imposes the Tethered condition may end that condition as a
+      bonus action.
+    </p>
+
     <h5><span class="mdi mdi-cross-celtic"></span>Turned</h5>
     <p>
       A Turned creature must spend its action and movement on each of its turns
