--- a/src/components/database/tabs/multiclassing-tab/multiclassing-tab.component.html
+++ b/src/components/database/tabs/multiclassing-tab/multiclassing-tab.component.html
@@ -101,5 +101,6 @@
     <li>Soulknife - <em>Rogue</em></li>
     <li>Occultist Discipline - <em>Savant</em></li>
     <li>Academy of Skalds - <em>Warlord</em></li>
+    <li>Academy of the Way - <em>Warlord</em></li>
   </ul>
 </div>
