Working on choices

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,14 @@
       </div>
       <div class="link">
         <a
+          routerLink="characters/new/builder"
+          routerLinkActive="active"
+          ariaCurrentWhenActive="page"
+          >Builder (Testing)</a
+        >
+      </div>
+      <div class="link">
+        <a
           routerLink="/database/spells"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
