--- a/src/components/lore/lore-base/lore-base.component.html
+++ b/src/components/lore/lore-base/lore-base.component.html
@@ -108,6 +108,69 @@
           gladiators.
         </p>
 
+        <h5>Echospace<sup>&epsilon;</sup></h5>
+        <p>
+          This sphere contains a modern Earth on which magical creatures,
+          including dragons, ogres, unicorns, satyrs, and many more, are hidden
+          from mortals by powerful magic. Most of them live out their lives on
+          magical preserves dotted around the world.
+        </p>
+        <h6>Echolands<sup>&mu;</sup></h6>
+        <p>
+          The Echolands are an Astral Manifestation bound to Echospace, from
+          which the sphere derives its name. They are a sort of waystop between
+          Echospace and the Fugue Plane, where souls from Echospace go to let go
+          of their mortality. Some souls move on quickly, some remain in the
+          Echolands for centuries.
+        </p>
+        <h6>Outskirts<sup>&mu;</sup></h6>
+        <p>
+          The Outskirts are a strange land built up on top of the Echolands by
+          the souls of mages that had been unsatisfied with moving on. The
+          Outskirts are imbued with strange magic that varies between each of
+          its five kingdoms, each variety of which can be described as being a
+          magic of betweenness.
+        </p>
+        <ul>
+          <li>
+            <strong>Creon.</strong> Creonese magic, called Wayminding and mostly
+            consisting of Transposition magic, involves the area between time
+            and space. Wayminders can teleport, alter the space around
+            themselves, or even travel through time.
+          </li>
+          <li>
+            <strong>Elloweer.</strong> Ellowine magic, called Enchanting and
+            mostly consisting of Enchantment, Illusion, and Transmutation magic,
+            involves the area between the senses. Enchanters can alter living
+            things or create illusions. Elloweer is also home to a great variety
+            of peoples, including those between humanity and animals.
+          </li>
+          <li>
+            <strong>Necronum.</strong> Necronese magic, called Deathweaving and
+            mostly consisting of Divination and Necromancy magic, invovles the
+            area between life and death. Deathweavers can commune with spirits,
+            divine the future, and even project their own spirits or that of
+            others. Necronum is the closest kingdom to the Echolands, and the
+            only one where mortals can temporarily cross over into the
+            Echolands.
+          </li>
+          <li>
+            <strong>Sambria.</strong> Sambrian magic, called Shaping and mostly
+            consisting of Conjuration, Evocation, and Transmutation magic,
+            involves the area between dreams and reality. Shapers can create
+            just about anything they can imagine. Sambrian shaping is the most
+            powerful of the five disciplines, but also the hardest to master.
+          </li>
+          <li>
+            <strong>Zeropolis.</strong> Zeropolitan magic, called Tinkering and
+            consisting of a great variety of magic, involves the area between
+            magic and technology. Zeropolitan casters are called Technomancers,
+            and they can fabricate wondrous gadgets powered by energy crystals.
+            This tinkering has resulted in Zeropolis being by far the most
+            technologically advanced of the kingdoms.
+          </li>
+        </ul>
+
         <h5>Folkspace<sup>&epsilon;</sup></h5>
         <p>
           This sphere contains an Earth on which all folk heroes from Earth
@@ -496,6 +559,10 @@
             <tr>
               <td>Darkspace</td>
               <td>Innistrad</td>
+            </tr>
+            <tr>
+              <td>Echospace</td>
+              <td>Earth, Outskirts, and Echolands (Fablehaven & Five Kingdoms)</td>
             </tr>
             <tr>
               <td>Eezospace</td>
