--- a/src/components/dm-tools/dm-tools.component.html
+++ b/src/components/dm-tools/dm-tools.component.html
@@ -565,6 +565,96 @@
   </nz-tab>
   <nz-tab nzTitle="Hunting">
     <nz-tabset nzSize="small" [nzAnimated]="false">
+      <nz-tab nzTitle="Desert/Wasteland">
+        <nz-table
+          [nzData]="['yo mama']"
+          [nzShowPagination]="false"
+          [nzPageSize]="1 / 0"
+          nzSize="small"
+        >
+          <thead>
+            <tr>
+              <th>1d20</th>
+              <th>Creature</th>
+              <th>Track DC</th>
+              <th>Kill DC</th>
+              <th>Meat</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1 - 3</td>
+              <td>1d2 Rabbits</td>
+              <td>12</td>
+              <td>14</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>4 - 6</td>
+              <td>1d6 Lizards</td>
+              <td>8</td>
+              <td>10</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>7 - 9</td>
+              <td>1d2 Camels</td>
+              <td>12</td>
+              <td>10</td>
+              <td>1d4</td>
+            </tr>
+            <tr>
+              <td>10 - 11</td>
+              <td>1d2 Armadillos</td>
+              <td>10</td>
+              <td>13</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>12 - 13</td>
+              <td>1d20 Scorpions</td>
+              <td>10</td>
+              <td>13</td>
+              <td>¼</td>
+            </tr>
+            <tr>
+              <td>14 - 15</td>
+              <td>1d20 Birds</td>
+              <td>10</td>
+              <td>8</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>16 - 17</td>
+              <td>1d4 Vultures</td>
+              <td>12</td>
+              <td>10</td>
+              <td>1</td>
+            </tr>
+            <tr>
+              <td>18</td>
+              <td>Giant Lizard</td>
+              <td>12</td>
+              <td>Combat</td>
+              <td>1d4</td>
+            </tr>
+            <tr>
+              <td>19</td>
+              <td>Sovereign Scorpion</td>
+              <td>13</td>
+              <td>Combat</td>
+              <td>1d4</td>
+            </tr>
+            <tr>
+              <td>20</td>
+              <td>Ostrich</td>
+              <td>15</td>
+              <td>Combat</td>
+              <td>2d6</td>
+            </tr>
+          </tbody>
+        </nz-table>
+      </nz-tab>
       <nz-tab nzTitle="Forest">
         <nz-table
           [nzData]="['yo mama']"
