--- a/src/components/rules/rules-combat/rules-combat.component.html
+++ b/src/components/rules/rules-combat/rules-combat.component.html
@@ -158,6 +158,30 @@
       affecting a creature.
     </p>
 
+    <h5><span class="mdi mdi-head-question"></span>Dazed</h5>
+    <p>
+      A Dazed creature can only do one of the following things on their turn:
+      move, use an action, or use a bonus action. If a creature becomes Dazed
+      during their turn, their turn ends.
+    </p>
+    <h6>Extra Actions While Dazed</h6>
+    <p>
+      When a dazed creature is affected by a spell or effect that gives them an
+      extra action on their turn (like the haste spell or the fighter's Action
+      Surge feature), they can still take this extra action, in addition to the
+      movement, action, or bonus action allowed by the dazed condition.
+    </p>
+    <h6>Immunity to the Dazed Condition</h6>
+    <p>
+      A creature that is immune to being Paralyzed or Stunned also has immunity
+      to being Dazed.
+    </p>
+    <h6>Ending the Condition</h6>
+    <p>
+      Any effect that ends the Paralyzed or Stunned condition can also end the
+      Dazed condition.
+    </p>
+
     <h5><span class="mdi mdi-ear-hearing-off"></span>Deafened</h5>
     <p>
       A deafened creature can't hear and automatically fails any ability check
@@ -581,7 +605,10 @@
 
     <h5><span class="mdi mdi-lasso"></span>Tethered</h5>
     <p>
-      A creature that is Tethered by an object or another creature cannot move outside of the reach of the ability used to tether it. Additionally, if the Tethered creature is at the maximum distance from the source of its tether, it is moved if the source moves away from it.
+      A creature that is Tethered by an object or another creature cannot move
+      outside of the reach of the ability used to tether it. Additionally, if
+      the Tethered creature is at the maximum distance from the source of its
+      tether, it is moved if the source moves away from it.
     </p>
     <h6>Ending the Condition</h6>
     <p>
